<resources>
    <string name="app_name">Bubble Gum Music</string>
    <string name="Phone_number">Número de Telefone</string>
    <string name="password">Senha</string>
    <string name="btn_register">Registrar-se</string>
    <string name="btn_enter">Entrar</string>
    <string name="txt_register">OU</string>
    <string name="txt_verification_number">Você recebeu um código no seu celular, digite \n ele no campo abaixo.</string>
    <string name="digite_código">Digite o código aqui</string>
    <string name="avançar">AVANÇAR</string>
    <string name="digite_numero">Digite seu número aqui</string>
    <string name="txt_register_number">Digite seu número no campo abaixo e confime na próxima tela.</string>
    <string name="profile_userName">Nome de usuário</string>
    <string name="confirmation_password">Confirmação da senha</string>
    <string name="profile_register_account">REGISTRAR</string>
    <string name="welcome">Parabéns, você criou uma conta.</string>
    <string name="logged">Você está logado como \n %1$s</string>
    <string name="loggout">Deslogar</string>
    <string name="profile_email">Email</string>
    <string name="userName">Nome</string>
    <string name="Email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registro</string>
    <string name="label_name">Nome</string>
    <string name="label_email">Email</string>
    <string name="label_password">Senha</string>
    <string name="label_confirm_password">Confirme a senha</string>
    <string name="label_welcome">Welcome in Bubble Gum Music</string>
    <string name="sign_in">Faça login</string>
    <string name="label_login">Login</string>
    <string name="DontHaveAnAccount">Não tem conta? Registre-se!</string>
    <string name="createAccount">Registrar</string>
    <string name="haveAccount">Já tem conta? Clique aqui.</string>
</resources>