<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pink_100">


    <LinearLayout
        android:id="@+id/profile_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3" >

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/txt_username"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/userName" />

        <EditText
            android:id="@+id/txt_email"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/profile_email" />

        <EditText
            android:id="@+id/txt_password"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/txt_password_confirm"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/confirmation_password" />

    </LinearLayout>


    <Button
        android:text="@string/profile_register_account"
        android:id="@+id/btn_register_account"
        style="@style/DefaultBtn"
        android:layout_marginTop="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_linear_layout"/>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_resgister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_linear_layout"
        android:layout_marginTop="35dp"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:background="@drawable/fab_background"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/pink_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_haveaccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_account"/>


</androidx.constraintlayout.widget.ConstraintLayout>