<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/DEFAULT_TXT_TITLE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/DEFAULT_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DEFAULT_TIE"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/DEFAULT_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DEFAULT_TIE"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="58dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/DEFAULT_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DEFAULT_TIE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/DEFAULT_TIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/label_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DEFAULT_TIE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/createAccount"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_HaveAccount"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            android:textSize="25sp"
            android:text="@string/haveAccount"
            android:fontFamily="@font/mousem_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>