<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_100">


    <ScrollView
        android:id="@+id/login_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" >

        <LinearLayout
            android:id="@+id/Login_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo2" />


            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/editEmail"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/Email" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/editPassword"
                style="@style/FormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password" />
        </LinearLayout>

    </ScrollView>


    <Button
        app:layout_constraintTop_toBottomOf="@+id/login_scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/DefaultBtn"
        android:id="@+id/btn_login"
        android:text="@string/btn_enter"
        android:layout_marginTop="30dp" />


    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_scrollView"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/btn_register"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/DefaultBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />



</androidx.constraintlayout.widget.ConstraintLayout>